# wind

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BRIDGE_SUMMARY.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  REPOSITORY_API_SUMMARY.md
.github/workflows/: ci.yml
crates/wind/: Cargo.toml
crates/wind-ai/: Cargo.toml
crates/wind-ai/src/: commit_message.rs  config.rs  features.rs  lib.rs  provider.rs
crates/wind-ai/src/provider/: openai.rs
crates/wind-ai/src/utils/: chunking.rs
crates/wind-bridge/: README.md
crates/wind-bridge/src/: database.rs  exporter.rs  hooks.rs  importer.rs  lib.rs  types.rs
crates/wind-bridge/tests/: integration_test.rs
crates/wind-collab/: Cargo.toml
crates/wind-collab/src/: github.rs  pr.rs
crates/wind-git/: Cargo.toml
crates/wind-git/src/: lib.rs
crates/wind-storage/: Cargo.toml
crates/wind-storage/src/: chunk_store.rs  object_store.rs  oid.rs  packfile.rs
crates/wind/benches/: perf_benchmarks.rs
crates/wind/src/: cache.rs  config.rs  conflict.rs  diff.rs  index.rs  lib.rs  merge.rs  model.rs  repository.rs  submodule.rs  unified_repository.rs  watcher.rs  watcher_test.rs  working_copy.rs
crates/wind/src/tui/: app.rs  commands.rs  config.rs  event.rs  example_usage.rs  mod.rs  state.rs
crates/wind/src/tui/ui/: components.rs  mod.rs
crates/wind/tests/: cli_integration_tests.rs  integration_tests.rs  merge_test.rs.old  repository_integration.rs  submodule_tests.rs  unified_integration.rs  worktree_tests.rs
docs/: BENCHMARKS.md  CONFLICT_RESOLUTION.md  FILE_WATCHING.md  IMPLEMENTATION_SUMMARY_PERF.md  PERFORMANCE.md  PERFORMANCE_SUMMARY.md  WATCHER_IMPLEMENTATION_SUMMARY.md  WORKTREE_SUBMODULE_IMPLEMENTATION.md
wind-ai/: Cargo.toml  README.md
wind-ai/src/: commit_message.rs  features.rs  lib.rs  utils.rs
wind-ai/src/provider/: anthropic.rs
wind-ai/src/utils/: sanitization.rs  templates.rs
wind-bridge/: Cargo.toml
wind-bridge/src/: exporter.rs  sync.rs
wind-cli/: Cargo.toml
wind-cli/src/: main.rs
wind-cli/src/commands/: add.rs  branch.rs  checkout.rs  commit.rs  config.rs  export.rs  import.rs  init.rs  log.rs  mod.rs  pr.rs  push.rs  rebase.rs  resolve.rs  stack.rs  status.rs  submodule.rs  sync.rs  tui.rs  worktree.rs
wind-collab/: Cargo.toml  README.md
wind-collab/src/: models.rs  pr.rs  provider.rs
wind-core/: Cargo.toml
wind-core/benches/: perf_benchmarks.rs
wind-core/src/: config.rs  lib.rs  merge.rs  object_store.rs  perf.rs  repository.rs  stack.rs  unified_repository.rs  working_copy.rs  worktree.rs
wind-core/tests/: integration_tests.rs  merge_test.rs.old  repository_integration.rs  submodule_tests.rs  unified_integration.rs  worktree_tests.rs
wind-storage/: README.md
wind-storage/benches/: storage_bench.rs
wind-storage/src/: chunker.rs  layout.rs  lib.rs  object_store.rs
wind-tui/: Cargo.toml  README.md
wind-tui/src/: app.rs  commands.rs  config.rs  example_usage.rs  lazy_list.rs  lib.rs  state.rs
wind-tui/src/ui/: components.rs  mod.rs
