[workspace]
members = [
    "crates/wind",
    "crates/wind-git",
    "crates/wind-storage",
    "crates/wind-ai",
    "crates/wind-collab",
    "crates/wind-bridge",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["Wind VCS Contributors"]

[workspace.dependencies]
git2 = "0.19"
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = "0.3"
notify = "6.1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
regex = "1.11"
lazy_static = "1.5"
rusqlite = { version = "0.32", features = ["bundled"] }
