[package]
name = "wind-ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wind-core = { path = "../wind-core" }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
