[package]
name = "wind-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
git2 = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
wind-storage = { path = "../wind-storage" }

[dev-dependencies]
tempfile = "3.8"
