[package]
name = "wind-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "wind"
path = "src/main.rs"

[dependencies]
wind-core = { path = "../wind-core" }
wind-tui = { path = "../wind-tui" }
wind-ai = { path = "../wind-ai" }
wind-collab = { path = "../wind-collab" }

tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3.15"
