[package]
name = "wind-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
git2 = "0.19"
notify = { workspace = true }
toml = "0.8"
rusqlite = { workspace = true }
similar = { version = "2.6", features = ["text"] }
walkdir = "2.5"
ignore = "0.4"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.11", features = ["v4"] }
chrono = "0.4"
wind-storage = { path = "../wind-storage" }
wind-bridge = { path = "../wind-bridge" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[[bench]]
name = "perf_benchmarks"
harness = false
