[package]
name = "wind-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
blake3 = "1.5"
zstd = "0.13"
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
bincode = "1.3"
fastcdc = "3.1"
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3.14"
criterion = "0.5"

[[bench]]
name = "storage_bench"
harness = false
