[package]
name = "wind"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "wind"
path = "src/bin/wind.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
git2 = "0.19"
notify = { workspace = true }
toml = "0.8"
rusqlite = { workspace = true }
similar = { version = "2.6", features = ["text"] }
walkdir = "2.5"
ignore = "0.4"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.11", features = ["v4"] }
chrono = "0.4"
wind-storage = { path = "../wind-storage" }
wind-bridge = { path = "../wind-bridge" }
wind-ai = { path = "../wind-ai" }
wind-collab = { path = "../wind-collab" }
clap = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ctrlc = "3.4"
async-trait = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
crossterm = "0.28"
ratatui = "0.29"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.15"
